--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@ nav a {
 
 nav div {
   transition: all 0.5s;
-  width: 10%;
+  width: 12%;
   text-align: center;
 }
+
 
 nav div:hover {
   letter-spacing: 0.1rem;
@@ -47,17 +48,12 @@ section {
 }
 
 section form {
-  /* width: 50%; */
   align-self: center;
 }
 
-section div:has(button) {
-  align-self: flex-stary;
-}
-
 section canvas {
-  -moz-box-shadow: 0 0 6px black;
-  -webkit-box-shadow: 0 0 6px black;
+  /* -moz-box-shadow: 0 0 6px black;
+  -webkit-box-shadow: 0 0 6px black; */
   box-shadow: 0 0 6px black;
 }
 
